--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,6 @@ body {
 section {
     box-shadow: 0px 0px 20px rgb(0, 0, 0);
     transition: box-shadow 0.3s;
-    padding: 100px 0;
     text-align: center;
     transition: background-color 0.3s, color 0.3s;
     max-width: 100%;
@@ -46,6 +45,13 @@ section {
     background-color: #007bff;
     margin-bottom: 30px;
 }
+
+/* Estilo para la división entre secciones de habilidades */
+.divider {
+    background-color: #333; /* Color oscuro, puedes ajustarlo según tu paleta de colores */
+    height: 2px; /* Altura de la división */
+    margin: 20px 0; /* Margen superior e inferior para dar espacio entre las secciones */
+  }
 
 /* Seccion Inicio */
 
